--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <div class="user_edit">
       <h2>ユーザー編集</h2>
       <form id="user_edit">
-        <input type="text" id="user-edit_id" placeholder="ユーザーID" required>
-        <input type="text" id="user-edit_name" placeholder="名前を入れてね" required>
-        <input type="text" id="user-edit_bio" placeholder="自己紹介を入れてね" required>
+        <input type="text" id="user_edit_id" placeholder="ユーザーID" required>
+        <input type="text" id="user_edit_name" placeholder="名前を入れてね" required>
+        <input type="text" id="user_edit_bio" placeholder="自己紹介を入れてね" required>
         <button type="submit" id="user_edit_submit">送信</button>
       </form>
     </div>
