Fetch with addEventListener error

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
       <div class="logo"><img class="logo-icon" src="../img/code.png"></div>
       <div class="title"><h1>Log in to OkaChat</h1></div>
     </div>
-    <form action="" id="sign_in">
+    <form action="timeline.html" id="sign_in">
       <div class="input-cover">
         <label class="input-label" for="sign_in_email">
           <div class="input-indication">
@@ -58,7 +58,7 @@
   <div class="sign_up_popup" id="js-popup">
     <div class="popup-inner">
       <div class="close-btn" id="js-close-btn"><i class="fa fa-times"></i></div>
-      <form action="" id="sign_up">
+      <form action="timeline.html" id="sign_up">
         <span style="color: #8899a6;">Fill in the blank</span>
         <div class="input-cover">
           <label class="input-label" for="sign_up_name">
@@ -106,7 +106,7 @@
               <span>repeat password</span>
             </div>
             <div class="input-area">
-              <input type="password" id="sign_up_password-confirmation" placeholder="password" required>
+              <input type="password" id="sign_up_password_confirmation" placeholder="password" required>
             </div>
           </label>
         </div>
