--- a/html/index.html
+++ b/html/index.html
@@ -117,6 +117,6 @@
     </div>
     <div class="black-background" id="js-black-bg"></div>
   </div>
-  <script src="../js/master.js"></script>
+  <script src="../js/index.js"></script>
 </body>
 </html>
