Fixed error, show timeline

--- a/html/timeline.html
+++ b/html/timeline.html
@@ -46,18 +46,8 @@
               </form>
             </div>
           </div>
-          <main class="timeline">
-            <div class="posted-items" hidden>
-              <div class="for-img"></div>
-              <div class="for-posts">
-                <div class="for-name-bio">
-                  <span class="for-name"></span>
-                  <span class="for-bio"></span>
-                </div>
-                <div class="for-text"></div>
-              </div>
-            </div>
-          </main>
+          <div class="timeline">
+          </div>
         </div>
       </div>
       <div class="column right-column">あ
